Fixed mobile nav menù alignment + Updated meta data

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -230,6 +230,7 @@ p {
   align-items: center;
   flex-direction: column;
   height: 100%;
+  padding: 0;
 }
 
 .nav__list-mobile .nav__item {
